@@ -1,5 +1,12 @@
 2009-03-03  Alexander Larsson  <alexl@redhat.com>
 
+	Bug 561172 – gnome-open fails on local URIs with anchors
+
+        * programs/gvfs-open.c:
+	Don't pass file:// uris with anchor as filename
+
+2009-03-03  Alexander Larsson  <alexl@redhat.com>
+
         * client/gdaemonfileinputstream.c:
         * client/gdaemonfileoutputstream.c:
 	Make argument const char * as per the glib change.
